--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Learn-to-Race Challenge
+title: Learn-to-Race Workshop
 email:
 description: >- # this means to ignore newlines until "baseurl:"
-  Learn-to-Race Challenges in Autononous Driving
+#   Learn-to-Race Challenges in Autononous Driving
 baseurl: "/challenge" # the subpath of your site, e.g. /blog
 url: "learn-to-race.org" # l2r-workshop-website" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Learn2Race
