--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -28,7 +28,7 @@ challenge-nav:
 header:
   - titles:
       # @start locale config
-      en      : &EN       Participate! <svg width="12px" height="12px" viewBox="0 0 24 24" style="cursor:pointer"><g stroke-width="2.1" stroke="#666" fill="none" stroke-linecap="round" stroke-linejoin="round"><polyline points="17 13.5 17 19.5 5 19.5 5 7.5 11 7.5"></polyline><path d="M14,4.5 L20,4.5 L20,10.5 M20,4.5 L11,13.5"></path></g></svg>
+      en      : &EN       Challenge <svg width="12px" height="12px" viewBox="0 0 24 24" style="cursor:pointer"><g stroke-width="2.1" stroke="#666" fill="none" stroke-linecap="round" stroke-linejoin="round"><polyline points="17 13.5 17 19.5 5 19.5 5 7.5 11 7.5"></polyline><path d="M14,4.5 L20,4.5 L20,10.5 M20,4.5 L11,13.5"></path></g></svg>
       en-GB   : *EN
       en-US   : *EN
       en-CA   : *EN
@@ -66,15 +66,15 @@ header:
       # @end locale config
     url: /calls.html
 
-  - titles:
-      # @start locale config
-      en      : &EN       Rules
-      en-GB   : *EN
-      en-US   : *EN
-      en-CA   : *EN
-      en-AU   : *EN
-      # @end locale config
-    url: /challenge.html
+#  - titles:
+#      # @start locale config
+#      en      : &EN       Rules
+#      en-GB   : *EN
+#      en-US   : *EN
+#      en-CA   : *EN
+#      en-AU   : *EN
+#      # @end locale config
+#    url: /challenge.html
 
 #  - titles:
 #      # @start locale config
@@ -105,3 +105,13 @@ header:
       en-AU   : *EN
       # @end locale config
     url: /index.html#organisers
+
+  - titles:
+      # @start locale config
+      en      : &EN       L2R <svg width="12px" height="12px" viewBox="0 0 24 24" style="cursor:pointer"><g stroke-width="2.1" stroke="#666" fill="none" stroke-linecap="round" stroke-linejoin="round"><polyline points="17 13.5 17 19.5 5 19.5 5 7.5 11 7.5"></polyline><path d="M14,4.5 L20,4.5 L20,10.5 M20,4.5 L11,13.5"></path></g></svg>
+      en-GB   : *EN
+      en-US   : *EN
+      en-CA   : *EN
+      en-AU   : *EN
+      # @end locale config
+    url: https://learn-to-race.org
