--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Learn-to-Race Workshop
 email:
 description: >- # this means to ignore newlines until "baseurl:"
 #   Learn-to-Race Challenges in Autononous Driving
-baseurl: "/challenge" # the subpath of your site, e.g. /blog
+baseurl: "/workshop-ai4ad-ijcai2022" # the subpath of your site, e.g. /blog
 url: "learn-to-race.org" # l2r-workshop-website" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Learn2Race
 github_username: learn-to-race
