--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: AI4AD Workshop
+title: AORC Workshop
 email:
 description: >- # this means to ignore newlines until "baseurl:"
 #   Learn-to-Race Challenges in Autononous Driving
-baseurl: "/workshop-ai4ad-ijcai2022" # the subpath of your site, e.g. /blog
+baseurl: "/aorc_icra23" # the subpath of your site, e.g. /blog
 url: "learn-to-race.org" # l2r-workshop-website" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: Learn2Race
-github_username: learn-to-race
+twitter_username: 
+github_username: cmubig
 
 # Build settings
 #theme: jekyll-text-theme
@@ -33,6 +33,9 @@ remote_theme: kitian616/jekyll-text-theme
 highlight_theme: default
 plugins:
   - jekyll-feed
+
+conf_name: AORC
+conf_full_name: Assessment of Robotic Capabilities
 
 # Exclude from processing.
 # The following items will not be processed, by default.
