--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: AORC Workshop
 email:
 description: >- # this means to ignore newlines until "baseurl:"
 #   Learn-to-Race Challenges in Autononous Driving
-baseurl: "/aorc_icra23" # the subpath of your site, e.g. /blog
-url: "learn-to-race.org" # l2r-workshop-website" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/aorc_icra23_workshop" # the subpath of your site, e.g. /blog
+url: "cmubig.github.io" # l2r-workshop-website" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
 github_username: cmubig
 
