--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: ARC Meeting
 email:
 description: >- # this means to ignore newlines until "baseurl:"
 #   Learn-to-Race Challenges in Autononous Driving
-baseurl: "/arc-icra23-workshop" # the subpath of your site, e.g. /blog
+baseurl: "/arc-icra23" # the subpath of your site, e.g. /blog
 url: "cmubig.github.io" # l2r-workshop-website" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
 github_username: cmubig
